# intelDecoder

./: .gitignore  CMakeLists.txt  build.sh  main.cpp  run.sh
TPL/IntelSDK/: libigdgmm.so.11.3.0  libigdgmm.so.12  libmfx.so.1  libva-drm.so.2  libva-x11.so.2  libva.so.2
TPL/ffmpeg_intel/lib/: libavdevice.so.58.13.100  libavfilter.so.7.110.100  libavformat.so.58.76.100  libpostproc.so.55.9.100  libswresample.so.3.9.100
TPL/ffmpeg_intel/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
TPL/ffmpeg_intel/share/doc/ffmpeg/: git-howto.html
TPL/opencv/include/opencv2/: cvconfig.h  opencv_modules.hpp
TPL/opencv/lib/: libopencv_features2d.so.4.5.5  libopencv_highgui.so.405  libopencv_imgcodecs.so.4.5.5  libopencv_videoio.so.405
TPL/opencv/lib/cmake/: conan-official-opencv-targets.cmake
TPL/yaml-cpp/lib/cmake/yaml-cpp/: yaml-cpp-targets.cmake
config/: decoder.yaml
header/: manager.h
header/decoder/: decoder.h
header/reader/: BaseReader.h  H265Reader.h
src/: manager.cpp
src/decoder/: decoder.cpp
src/reader/: BaseReader.cpp  H265Reader.cpp
tool/: mem.py
